--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+header{
+    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(bknd.jpg);
+    min-height: 100vh;
+    background-size: cover; 
+    background-position: center;
+}
+
+.row{
+    max-width: 1200px;
+    margin: auto;
+   
+}
 #btn{
 	background:red;
 }
